Fixed the aligning of the objects. First tried flex then went back to clear and float.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body{
 	background-color: #6A4061;
+		letter-spacing: 1px;
 	
 }
 
@@ -7,6 +8,7 @@ body{
 	font-family: 'Special Elite', 'cursive';
 	text-align: center;
 	color: #7CB82F;
+	margin-top: 50px;
 }
 
 #main{
@@ -14,26 +16,29 @@ body{
 	font-family: 'Libre Baskerville', serif;
 	font-size: 20px;
 	color:  #A16A4D;
-	clear: left;
-	padding: 0 10px;
-	margin-top: 50px;
+	padding: 25px 10px;
+	margin: 50px 25px 0 25px;
 }
 
 .wrap{
-	padding: 25px;
-	display: flex;
-/*	align-items: flex-start;*/
-	align-content: flex-start;
-/*	justify-content: space-around;*/
+	padding: 0 25px 0 25px;
+	overflow: hidden;
+
+/*	display: flex;
+	justify-content: flex-start;
+	align-content: flex-start;*/
+
 
 }
 
 .photos img{
-	border-radius: 5px;
 	height: 100px;
 	width: 100px;
-	padding: 0 25px;
-	clear: left;
+	padding: 50px 25px 50px 0;
+	float: left;
+	/*order: -1;*/
+
+
 }
 
 /*.img{
@@ -45,15 +50,20 @@ body{
 .item{
 	font-family: 'Special ELite', 'cursive';
 	font-weight: bold;
-	padding: 10px;
-	height: 25%;}
+	padding-bottom: 5px;
+	margin-top: 75px;
+	clear:right;
+/*	order: 0;
+	align-self: inherit;*/
+
+}
 
 .description{
 	font-weight: normal;
 	font-size: 14px;
-	margin-right: 400px;
-	align-self: flex-end;
-	justify-content: flex-start;
+/*	order: 1;
+	align-self: inherit;
+*/
 
 }
 
@@ -61,14 +71,24 @@ body{
 	font-weight: normal;
 	font-size: 14px;
 	float: right;
-	/*width: 200px;*/
+	margin-top: -19px;
+	margin-right: 57px;
+/*	order: 2;*/
+}
+
+hr.style13 {
+	clear: left;
+/*	margin-top: 50px;*/
+	height: 10px;
+	border: 0;
+	box-shadow: 0 10px 10px -10px #8c8b8b inset;
 }
 
 #subtotal{
 	font-family: 'Special Elite', 'cursive';
 	color: #7CB82F;
 	float: right;
-	margin-top: 25px;
-	margin-right: 35px;
+	margin: 50px 0;
+	margin-right: 57px;
 }
 
